--- a/build.gradle
+++ b/build.gradle
@@ -38,4 +38,6 @@ ext {
     KOREACTOR_VERSION = '0.0.4'
     TIMBERKT_VERSION = '1.4.0'
     MOSHI_VERSION = '1.5.0'
+    RETROFIT_VERSION = '2.3.0'
+    OK_HTTP_VERSION = '3.9.0'
 }
