--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    androidExtensions {
+        experimental = true
+    }
 }
 
 dependencies {
@@ -38,6 +42,7 @@ dependencies {
     implementation "com.jakewharton.rxbinding2:rxbinding-recyclerview-v7-kotlin:$rootProject.ext.RX_BINDING"
 
     // Support libraries
+    implementation "com.android.support:cardview-v7:$rootProject.ext.SUPPORT_LIBRARY_VERSION"
     implementation "com.android.support:design:$rootProject.ext.SUPPORT_LIBRARY_VERSION"
     implementation "com.android.support:appcompat-v7:$rootProject.ext.SUPPORT_LIBRARY_VERSION"
     implementation "com.android.support:recyclerview-v7:$rootProject.ext.SUPPORT_LIBRARY_VERSION"
@@ -50,8 +55,7 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:$rootProject.ext.DAGGER_VERSION"
 
     // Mvi architecture
-//    implementation "com.github.SumeraMartin:koreactor:$rootProject.ext.KOREACTOR_VERSION"
-    implementation "com.github.SumeraMartin:koreactor:7d99f335a6"
+    implementation "com.github.SumeraMartin:koreactor:$rootProject.ext.KOREACTOR_VERSION"
 
     // Logging
     implementation "com.github.ajalt:timberkt:$rootProject.ext.TIMBERKT_VERSION"
@@ -66,6 +70,15 @@ dependencies {
     // Json parsing
     implementation "com.squareup.moshi:moshi:$rootProject.ext.MOSHI_VERSION"
     implementation "com.squareup.moshi:moshi-kotlin:$rootProject.ext.MOSHI_VERSION"
+
+    // Image loader
+    implementation "com.github.bumptech.glide:glide:$rootProject.ext.GLIDE_VERSION"
+    annotationProcessor "com.github.bumptech.glide:compiler:$rootProject.ext.GLIDE_VERSION"
+
+    // UI
+    implementation "com.yarolegovich:discrete-scrollview:$rootProject.ext.DISCRETE_SCROLL_VIEW_VERSION"
+    implementation "com.wang.avi:library:$rootProject.ext.AVLOADING_INDICATOR_VERSION"
+    implementation "com.alexvasilkov:gesture-views:$rootProject.ext.GESTURE_VIEWS_VERSION"
 
     // Testing
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
