--- a/build.gradle
+++ b/build.gradle
@@ -35,9 +35,13 @@ ext {
     RX_ANDROID = '2.0.1'
     RX_BINDING = '2.1.0'
     DAGGER_VERSION = '2.14.1'
-    KOREACTOR_VERSION = '0.0.4'
+    KOREACTOR_VERSION = '0.0.6'
     TIMBERKT_VERSION = '1.4.0'
     MOSHI_VERSION = '1.5.0'
     RETROFIT_VERSION = '2.3.0'
     OK_HTTP_VERSION = '3.9.0'
+    GLIDE_VERSION = '4.6.1'
+    DISCRETE_SCROLL_VIEW_VERSION = '1.4.4'
+    AVLOADING_INDICATOR_VERSION = '2.1.3'
+    GESTURE_VIEWS_VERSION = '2.4.1'
 }
