--- a/build.gradle
+++ b/build.gradle
@@ -46,4 +46,6 @@ ext {
     GESTURE_VIEWS_VERSION = '2.4.1'
     SLIDING_UP_PANNEL_VERSION = '3.4.0'
     ROOM_VERSION = '1.1.0-alpha2'
+    BUBBLESEEKBAR_VERSION = '3.7'
+    ANDROID_KTX = '0.1'
 }
