Add base implementation of AR scene implemented in Unity via aar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="com.sumera.argallery"
-		  xmlns:android="http://schemas.android.com/apk/res/android">
+		  xmlns:android="http://schemas.android.com/apk/res/android"
+		  xmlns:tools="http://schemas.android.com/tools">
 
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.CAMERA" />
 
 	<application
 		android:name=".App"
@@ -11,7 +13,9 @@
 		android:label="@string/app_name"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
-		android:theme="@style/AppTheme">
+		android:theme="@style/AppTheme"
+		tools:replace="android:icon,android:theme">
+
 		<activity android:name="com.sumera.argallery.ui.feature.main.MainActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
