--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 27
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.sumera.argalleryandroid"
         minSdkVersion 24
@@ -14,6 +15,9 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug {
+            minifyEnabled false
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -26,6 +30,13 @@ android {
 }
 
 dependencies {
+    // Unity ARGallery module
+    implementation(name: 'argalleryunity', ext:'aar')
+    implementation(name: 'arcore_client', ext: 'aar')
+    implementation(name: 'google_ar_required', ext: 'aar')
+    implementation(name: 'unityandroidpermissions', ext:'aar')
+    implementation(name: 'unitygar', ext:'aar')
+
     // Kotlin
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
@@ -43,6 +54,9 @@ dependencies {
     implementation "com.jakewharton.rxbinding2:rxbinding-design-kotlin:$RX_BINDING"
     implementation "com.jakewharton.rxbinding2:rxbinding-appcompat-v7-kotlin:$rootProject.ext.RX_BINDING"
     implementation "com.jakewharton.rxbinding2:rxbinding-recyclerview-v7-kotlin:$rootProject.ext.RX_BINDING"
+
+    // Permissions
+    implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
 
     // Support libraries
     implementation "com.android.support:cardview-v7:$rootProject.ext.SUPPORT_LIBRARY_VERSION"
