--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,4 +107,6 @@ dependencies {
 
     // Testing
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    testImplementation "com.nhaarman:mockito-kotlin:1.5.0"
+    testImplementation 'com.github.Plastix.RxSchedulerRule:rx2:1.0.2'
 }
